# XKCP-PRNG

./: .gitmodules  CMakeLists.txt  README.md
include/: AreionPRNG.hpp  BLAKE3PRNG.hpp  K12PRNG.hpp  SHAKEPRNG.hpp  xoodoo-prng.hpp
test/: CMakeLists.txt  benchmark.cpp  practrandgen.cpp  wrapper4testu01.cpp
thirdparties/: CMakeLists.txt  XKCP.cmake
